<resources>
    <string name="app_name">appAcademia</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_cursos">Cursos</string>
    <string name="title_chat">Chat</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_ajustes">Ajustes</string>
    <string name="title_notif">Notificaciones</string>

    <string name="edad_5_8">5-8</string>
    <string name="edad_9_12">9-12</string>
    <string name="edad_13_16">13-16</string>
...
    <string name="hint_contrasena">Contraseña...</string>
    <string name="lbl_mantenerSesionIniciada">Mantener sesión iniciada</string>
    <string name="lbl_continuarConGoogle">Continuar con Google</string>
    <string name="lbl_registroAcademia">Registrarme como academia</string>
    <string name="lbl_registroUsuario">Registrarme como usuario</string>
    <string name="lbl_forgotPassword">He olvidado mi contraseña</string>
    <string name="txt_btn_inciarSesion">Iniciar sesión</string>
    <string name="lbl_btn_editarInfoPerfil">Editar perfil</string>
    <string name="lbl_usuario">Usuario:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_contrasena">Contraseña:</string>
    <string name="lbl_tituloPerfil">Perfil</string>
    <string name="lbl_nombre">Nombre:</string>
...
