...
        android:id="@+id/mapaFragment"
        android:name="com.example.appacademia.fragment_mapa"
        android:label="@string/fragment_mapa"
        tools:layout="@layout/fragment_mapa"/>

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.appacademia.ui.fragments.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_login"
...
